# tiny-mlir

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/tiny/Conversion/: CMakeLists.txt
src/tiny/Conversion/TinyAcclToLLVM/: CMakeLists.txt  Passes.td
src/tiny/Conversion/TinyToAccl/: CMakeLists.txt  Passes.h  Passes.td  TinyToAcclPass.cpp  TinyToAcclPass.h
src/tiny/Conversion/TinyToLLVM/: BinaryOpToLLVM.h  CMakeLists.txt  ElementwiseOpToLLVM.cpp  ElementwiseOpToLLVM.h  FuncOpToLLVM.cpp  FuncOpToLLVM.h  LoadOpToLLVM.h  Passes.h  Passes.td  PatternTinyToLLVM.h  TinyAttrConverter.cpp  TinyAttrConverter.h  TinyToLLVMPass.cpp  TinyToLLVMPass.h  TypeConverter.h
src/tiny/Dialect/: CMakeLists.txt  TinyDialect.cpp  TinyDialect.h  TinyDialect.td  TinyOps.cpp  TinyOps.h  TinyOps.td  TinyTypes.h  TinyTypes.td
src/tiny/Dialect/Accelerator/: CMakeLists.txt
src/tiny/Dialect/Accelerator/IR/: AcclAttrs.td  AcclDialect.cpp  AcclDialect.h  AcclDialect.td  CMakeLists.txt
src/tiny/Dialect/Accelerator/Transform/: AcclConversion.cpp  AcclConversion.h  CMakeLists.txt  Passes.h
src/tiny/Dialect/Tiny/: CMakeLists.txt  TinyDialect.cpp  TinyDialect.h  TinyDialect.td  TinyOps.cpp  TinyOps.h  TinyOps.td  TinyPatterns.cpp  TinyTypes.h
src/tiny/Dialect/Tiny/IR/: CMakeLists.txt  TinyAttrs.td  TinyDialect.cpp  TinyDialect.h  TinyDialect.td  TinyOps.cpp  TinyOps.h  TinyOps.td  TinyPatterns.cpp  TinyPatterns.pdll  TinyTypes.td
src/tiny/Dialect/Tiny/Transform/: BufferizableOpInterfaceImpl.cpp  BufferizableOpInterfaceImpl.h  CMakeLists.txt  Passes.cpp  Passes.h  Passes.pdll  Passes.td  Patterns.cpp  Patterns.h  Patterns.pdll
test/Output/: unary_ops.mlir.script
tests/: CMakeLists.txt  binary_ops.mlir  buffer_ops.mlir  lit.cfg.py  lit.cmake.cfg.py  lit.site.cfg.py.in  load_ops.mlir  noop.mlir  reduce_ops.mlir  ternary_ops.mlir  unary_ops.mlir
tests/Conversion/: tiny_to_accl.mlir  tiny_to_llvm.mlir
tools/: CMakeLists.txt  tiny-opt.cpp
